@@ -44,9 +44,12 @@
  * HISTORY
  * 
  * $Log$
- * Revision 1.3  2004/12/10  16:48:58  rkm
- * Added continuous density acoustic model handling
+ * Revision 1.4  2005/01/26  17:54:52  rkm
+ * Added -maxhmmpf absolute pruning parameter in FSG mode
  * 
+ * Revision 1.3  2004/12/10 16:48:58  rkm
+ * Added continuous density acoustic model handling
+ *
  * Revision 1.2  2004/07/23 23:36:34  egouvea
  * Ravi's merge, with the latest fixes in the FSG code, and making the log files generated by FSG, LM, and allphone have the same 'look and feel', with the backtrace information presented consistently
  *
@@ -121,9 +124,13 @@ typedef struct fsg_search_s {
   glist_t pnode_active;		/* Those active in this frame */
   glist_t pnode_active_next;	/* Those activated for the next frame */
   
-  int32 beam;			/* Global threshold */
-  int32 pbeam;			/* Threshold for phone transition */
-  int32 wbeam;			/* Threshold for word exit */
+  int32 beam_orig;		/* Global pruning threshold */
+  int32 pbeam_orig;		/* Pruning threshold for phone transition */
+  int32 wbeam_orig;		/* Pruning threshold for word exit */
+  float32 beam_factor;		/* Dynamic/adaptive factor (<=1) applied to above
+				   beams to determine actual effective beams.
+				   For implementing absolute pruning. */
+  int32 beam, pbeam, wbeam;	/* Effective beams after applying beam_factor */
   
   int32 frame;			/* Current frame */
 
